# cube-reconstruction

./: .gitignore  Notes.txt  README.md  pyproject.toml  radial_color.html
src/: example.html
src/cube_reconstruction/: radial_color.py
src/labeling_framework/: information.txt
src/modeling/: backbone.py  components.py  usage.py
src/rubik/: cube.py  scrambler.txt  string_tools.py  symmetries.py
src/rubik/utils/: center.py  corner.py  edge.py
src/validators/: cube.py  rubik.py  string_tools.py  symmetries.py
src/validators/utils/: center.py  corner.py  edges.py  sticker.py
tests/: test_corner_validation.py  test_cube.py  test_string_manipulation.py  test_symmetries.py
